--- a/_demos/UsingViewModelsWithAspNetMvc/UsingViewModelsWithAspNetMvc/UsingViewModelsWithAspNetMvc.csproj
+++ b/_demos/UsingViewModelsWithAspNetMvc/UsingViewModelsWithAspNetMvc/UsingViewModelsWithAspNetMvc.csproj
@@ -93,8 +93,8 @@
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CompanyRepository.cs" />
-    <Compile Include="ViewModels\CompanyViewModel.cs" />
-    <Compile Include="ViewModels\LayoutViewModel.cs" />
+    <Compile Include="ViewModels\Home\IndexViewModel.cs" />
+    <Compile Include="ViewModels\Shared\LayoutViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
